docs-archive/apache-airflow-providers-jdbc/2.0.1/_sources/_api/airflow/providers/jdbc/operators/jdbc/index.rst.txt
:py:mod:`airflow.providers.jdbc.operators.jdbc`
===============================================

.. py:module:: airflow.providers.jdbc.operators.jdbc


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.jdbc.operators.jdbc.JdbcOperator




.. py:class:: JdbcOperator(*, sql: Union[str, List[str]], jdbc_conn_id: str = 'jdbc_default', autocommit: bool = False, parameters: Optional[Union[Mapping, Iterable]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Executes sql code in a database using jdbc driver.

   Requires jaydebeapi.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:JdbcOperator`

   :param sql: the sql code to be executed. (templated)
   :type sql: Can receive a str representing a sql statement,
       a list of str (sql statements), or reference to a template file.
       Template reference are recognized by str ending in '.sql'
   :param jdbc_conn_id: reference to a predefined database
   :type jdbc_conn_id: str
   :param autocommit: if True, each command is automatically committed.
       (default value: False)
   :type autocommit: bool
   :param parameters: (optional) the parameters to render the SQL query with.
   :type parameters: dict or iterable

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['sql']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.sql']

      

   .. py:attribute:: ui_color
      :annotation: = #ededed

      

   .. py:method:: execute(self, context: airflow.utils.context.Context) -> None

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



